# SIRE

./: CMakeConfig.txt  CMakeLists.txt
data/: .box.scn.swp  PhongConf.exr  PhongConf.scn  WardConf.exr  WardConf.scn  box.exr  box.exr.xmp  box.scn  box2.exr  box2.exr.xmp  box2.scn  box2jsp les para.exr  checkboard.exr  deuxPlans.scn  deuxSpheres.exr  deuxSpheres.scn  deuxSpheresAntialiasing.exr  deuxSpheresAntialiasing.exr.xmp  ennis.exr.xmp  grace.exr.xmp  grace_cross.exr  grace_cross.exr.xmp  killeroo.scn  killeroo_area.scn  light_source.exr.xmp  lune.exr.xmp  petanque.scn  pisa.exr.xmp  rayure.exr.xmp  scenePerso.exr  scenePerso.scn  sphereWardEnvMap.exr  sphereWardEnvMap.exr.xmp  sphereWardEnvMap.scn  tasSpheres.scn  troisSpheres.scn  tw.scn  tw503.off  tw_area.exr  tw_area.scn
include/: areaLight.h  bitmap.h  bvh.h  common.h  glPrimitives.h  light.h  lightProbe.h  material.h  mesh.h  object.h  ray.h  renderingWidget.h  shape.h  sphere.h
src/: DirectMats.cpp  areaLight.cpp  bitmap.cpp  block.cpp  bvh.cpp  camera.cpp  common.cpp  main.cpp  material.cpp  mesh.cpp  object.cpp  parser.cpp  pathTracer.cpp  phong.cpp  proplist.cpp  renderingWidget.cpp  scene.cpp  shape.cpp  sphere.cpp  ward.cpp  whitted.cpp
